--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ log = "0.4.17"
 pixels = "0.11.0"
 rand = "0.8.5"
 randomize = "3.0.1"
+rayon = "1.6.1"
 wgpu = "0.15.1"
 winit = "0.28.1"
 winit_input_helper = "0.14.0"
